// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Default Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bgqQcB iCiqEp"
    label="Test Button"
    type="button"
  >
     Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Disable Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bgqQcB buwCqV"
    label="Test Button"
    type="button"
  >
     Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bgqQcB kNhvec"
    label="Test Button"
    type="button"
  >
    <span
      class="sc-gTRrQi daKBPn"
    />
     Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Outline Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bgqQcB eGWGxW"
    label="Outline Button"
    type="button"
  >
     Outline Button
  </button>
</DocumentFragment>
`;

exports[`Button Small Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bgqQcB hCCYhJ"
    label="Test Button"
    type="button"
  >
     Test Button
  </button>
</DocumentFragment>
`;
